# mgrep

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: catch.hpp.4F30EFE6E6D8F9C2.idx  main.cpp.56295E3A26247A65.idx  main.cpp.E02BBCA7D3E849CE.idx  thread-pool-testing.cpp.2F6B2C516DCAAC6A.idx  threads.cpp.943A40354E118672.idx  threads.cpp.B20D6292989AB8EC.idx  threads.hpp.ACFB08533B4C708D.idx  threads.hpp.E83808EF111D5881.idx
include/: threads.hpp
scripts/: grep_olympics.bash
src/: main.cpp  threads.cpp
testing/: thread-pool-testing.cpp
